--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "pnpm drizzle-kit generate:mysql",
+    "studio": "pnpm drizzle-kit studio"
+
+
   },
   "dependencies": {
+    "@nextui-org/accordion": "^2.0.28",
     "@nextui-org/button": "2.0.26",
     "@nextui-org/code": "2.0.24",
     "@nextui-org/input": "2.1.16",
     "@nextui-org/kbd": "2.0.25",
     "@nextui-org/link": "2.0.26",
     "@nextui-org/navbar": "2.0.27",
+    "@nextui-org/react": "^2.2.9",
     "@nextui-org/snippet": "2.0.30",
     "@nextui-org/switch": "2.0.25",
     "@nextui-org/system": "2.0.15",
@@ -26,11 +32,13 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.16",
     "clsx": "^2.0.0",
+    "drizzle-orm": "^0.29.3",
     "eslint": "8.48.0",
     "eslint-config-next": "14.0.2",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^10.18.0",
     "intl-messageformat": "^10.5.0",
-    "next": "14.0.2",
+    "mysql2": "^3.7.0",
+    "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
@@ -38,5 +46,8 @@
     "tailwind-variants": "^0.1.18",
     "tailwindcss": "3.3.5",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.20.12"
   }
 }
