--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "lint": "next lint",
     "migrate": "pnpm drizzle-kit generate:mysql",
     "studio": "pnpm drizzle-kit studio"
-
-
   },
   "dependencies": {
     "@nextui-org/accordion": "^2.0.28",
@@ -43,11 +41,14 @@
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-quill": "^2.0.0",
+    "sharp": "^0.33.2",
     "tailwind-variants": "^0.1.18",
     "tailwindcss": "3.3.5",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "drizzle-kit": "^0.20.12"
   }
 }
