--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.31",
+    "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-quill": "^2.0.0",
